--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "js",
-  "version": "1.0.0",
-  "description": "test1",
-  "main": "app.js",
-  "bin": {
-    "js": "test.js"
-  },
+  "name": "NodejsStarterApp",
+  "version": "0.0.1",
+  "description": "google translation api",
+  	"private": true,
+  "start": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "body-parser": "^1.15.1",
+    "cfenv": "1.0.x"
+  },
+  "engines": {
+    "node": "4.x"
   }
 }
